2025 02 24 change partner api and partner_table
